--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
                 <polygon class="lot-polygon lot-prime" points="1384,515 1439,635 1614,549 1557,437" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-02" data-lot-image-url="./images/cs3.png"></polygon>
                 <polygon class="lot-polygon lot-prime" points="1436,636 1495,753 1671,667 1613,549" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-03" data-lot-image-url="./images/cs3.png"></polygon>
                 <!-- Ipagpatuloy ang paglalagay ng tamang image URL para sa lahat ng lote -->
+                <polygon class="lot-polygon lot-prime" points="844,1547,867,1648,1017,1606,987,1507" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="S-03" data-lot-image-url="./images/cs9.png"></polygon>
                 <polygon class="lot-polygon lot-prime" points="1493,755 1550,873 1720,786 1667,671" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-04" data-lot-image-url="./images/cs3.png"></polygon>
                 <polygon class="lot-polygon lot-prime" points="1547,873 1606,992 1779,904 1724,788" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-05" data-lot-image-url="./images/cs3.png"></polygon>
                 <polygon class="lot-polygon lot-prime" points="1655,1097 1718,1223 1890,1135 1829,1013" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-06" data-lot-image-url="./images/cs4.png"></polygon>
                 <polygon class="lot-polygon lot-prime" points="1716,1223 1783,1360 1976,1307 1888,1139" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-07" data-lot-image-url="./images/cs5.png"></polygon>
                 <polygon class="lot-polygon lot-sunrise" points="1186,674 1341,631 1388,739 1217,787" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="S-01" data-lot-image-url="./images/cs6.png"></polygon>
                 <polygon class="lot-polygon lot-sunrise" points="1215,788 1245,889 1436,836 1388,739" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="S-02" data-lot-image-url="./images/cs7.png"></polygon>
-                <polygon class="lot-polygon lot-prime" points="1006,770 1033,854 1214,801 1197,715" data-bs-toggle="modal" data-bs-target="#lotModal" data-lot-id="P-08" data-lot-image-url="./images/cs8.png"></polygon>
+              
             </svg>
         </div>
     </div>
